// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Danger 1`] = `
<button
  className="button + danger + "
  disabled={false}
  onClick={[Function]}
>
   
  Button
</button>
`;

exports[`Storyshots Example/Button Default 1`] = `
<button
  className="button + default + "
  disabled={false}
  onClick={[Function]}
>
   
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="button + primary + "
  onClick={[Function]}
>
   
  Button
</button>
`;

exports[`Storyshots Example/Button Small Button 1`] = `
<button
  className="button + danger + small"
  onClick={[Function]}
>
   
  Button
</button>
`;

exports[`Storyshots Example/ControlPanel Disabled Checkboxes 1`] = `
<div
  className="container"
>
  <div
    className="select"
  >
    <div
      className="activeUser"
      onClick={[Function]}
    >
      User
      <div>
        <img
          alt="arrow"
          src="collapse-arrow.svg"
        />
      </div>
    </div>
    <div
      className="blockItems"
    >
      
    </div>
  </div>
  <div>
    <h4>
      Folders
    </h4>
    <div
      className="checkboxesBlock"
    >
      <div
        className="item"
      >
        <label
          className="disabled"
          onClick={[Function]}
        >
          <span>
            <img
              alt="unchecked"
              className="checkboxImg"
              src="uncheck.png"
            />
          </span>
          <span>
            move
          </span>
        </label>
      </div>
    </div>
  </div>
  <div>
    <h4>
      Gems
    </h4>
    <div
      className="checkboxesBlock"
    >
      <div
        className="item"
      >
        <label
          className="disabled"
          onClick={[Function]}
        >
          <span>
            <img
              alt="unchecked"
              className="checkboxImg"
              src="uncheck.png"
            />
          </span>
          <span>
            move
          </span>
        </label>
      </div>
    </div>
  </div>
  <button
    className="button + primary + small"
    onClick={[Function]}
  >
     
    save
  </button>
</div>
`;

exports[`Storyshots Example/ControlPanel Simple Control Panel 1`] = `
<div
  className="container"
>
  <div
    className="select"
  >
    <div
      className="activeUser"
      onClick={[Function]}
    >
      Developer
      <div>
        <img
          alt="arrow"
          src="collapse-arrow.svg"
        />
      </div>
    </div>
    <div
      className="blockItems"
    >
      
    </div>
  </div>
  <div>
    <h4>
      Folders
    </h4>
    <div
      className="checkboxesBlock"
    >
      <div
        className="item"
      >
        <label
          className="active"
          onClick={[Function]}
        >
          <span>
            <img
              alt="unchecked"
              className="checkboxImg"
              src="uncheck.png"
            />
          </span>
          <span>
            move
          </span>
        </label>
      </div>
    </div>
  </div>
  <div>
    <h4>
      Gems
    </h4>
    <div
      className="checkboxesBlock"
    >
      <div
        className="item"
      >
        <label
          className="active"
          onClick={[Function]}
        >
          <span>
            <img
              alt="unchecked"
              className="checkboxImg"
              src="uncheck.png"
            />
          </span>
          <span>
            move
          </span>
        </label>
      </div>
    </div>
  </div>
  <button
    className="button + primary + small"
    onClick={[Function]}
  >
     
    save
  </button>
</div>
`;

exports[`Storyshots Example/Dropdown Dropdown Test 1`] = `
<div
  className="items"
>
  <div
    className="item "
    onClick={[Function]}
  >
    Admin
  </div>
  <div
    className="item "
    onClick={[Function]}
  >
    Member
  </div>
  <div
    className="item "
    onClick={[Function]}
  >
    User
  </div>
  <div
    className="item "
    onClick={[Function]}
  >
    Custom
  </div>
</div>
`;
